--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "graphql-yoga": "^1.18.3",
     "tslib": "~2.0.1"
   },
   "volta": {
